--- a/Python_Exercise.ipynb
+++ b/Python_Exercise.ipynb
@@ -99,7 +99,8 @@
    "outputs": [],
    "source": [
     "# Fill in this cell to print the Longitude, Latitutde and Elevation inforamtion of the Cerro Tololo Telescope\n",
-    "\n"
+    "# I have not told you how to do this, have a think and try printing a few things until it works. \n",
+    "# You are free to do searches on google, though it may take longer than just trying to print things until it works.\n"
    ]
   },
   {
@@ -148,7 +149,8 @@
    "outputs": [],
    "source": [
     "# Fill in this cell to print number of hours between sunset and sunrise during the next night in Cerro Tololo.\n",
-    "\n"
+    "# I have not told you how to do this, have a think and try printing a few things until it works. \n",
+    "# You are free to do searches on google, though it may take longer than just trying to print things until it works.\n"
    ]
   }
  ],
