--- a/Python_Exercise.ipynb
+++ b/Python_Exercise.ipynb
@@ -12,7 +12,7 @@
     "## Learning Goals:\n",
     "- Find time now in Python\n",
     "- Learn how to define parameters for a telescope observatory in Python\n",
-    "- Learn how to find out sunset and sunrise times for the telescope observatory in Python\n",
+    "- Learn how to find out sunset, sunrise, moonset and moonrise times for the telescope observatory in Python\n",
     "- Change date time in string format to datetime format\n",
     "- Plot verticle lines with time on the x-axis\n",
     "\n",
